metadata/force-app/main/default/objects/CustomName_Xqukb__c/CustomName_Xqukb__c.object-meta.xml
<CustomObject>
    <description>Description_nOwIZ</description>
    <label>CustomLabel_UhkPL</label>
    <nameField>
        <label>CustomLabel_UhkPL</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_UhkPLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>