metadata/force-app/main/default/objects/CustomName_Xqukb__c/fields/CustomField_gfJFr__c.field-meta.xml
<CustomField>
    <fullName>CustomField_gfJFr__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldGdyqw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>