metadata/force-app/main/default/objects/CustomName_Xqukb__c/fields/CustomField_VxkZV__c.field-meta.xml
<CustomField>
    <fullName>CustomField_VxkZV__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldEbsOT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>